--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ requests==2.22.0
 soupsieve==1.9.5
 urllib3==1.25.7
 Werkzeug==0.16.0
+gunicorn
+flask_marshmallow
+flask_caching
+flask_migrate
+marshmallow_sqlalchemy
+PyJWT
+environs==5.2.1
