--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 lxml==4.4.1
 MarkupSafe==1.1.1
+nltk==3.4.5
 python-dotenv==0.10.3
 requests==2.22.0
+six==1.13.0
 soupsieve==1.9.5
 urllib3==1.25.7
 Werkzeug==0.16.0
