--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ Jinja2==2.10.3
 lxml==4.4.1
 Mako==1.1.0
 MarkupSafe==1.1.1
+marshmallow==3.2.2
+marshmallow-sqlalchemy==0.19.0
 nltk==3.4.5
 marshmallow==3.2.2
 marshmallow-sqlalchemy==0.19.0
